--- a/biji/11.11.md
+++ b/biji/11.11.md
@@ -13,14 +13,40 @@ ping 8.8.8.8    unreachable
 之后尝试了加入文件，配置namesever,改。wslconfig  对了，这个文件只有在wsl --shutdown之后才能重新加载
 中途发现win11没有hyper-v，在后面的查询中发现，hyper-v 包含两个部分：上层的管理系统和底层的虚拟机平台，win11把上层的管理系统直接交给wsl,底层的虚拟机平台综合进虚拟机平台
 ，所以只需要打开windows子系统选项和虚拟机平台即可。还有一个虚拟机监控平台不知道是干嘛的
-
+[尝试检索交换机列表出错】
 当时并不知道，于是下载了hyper-v,代码如见hyper-v.cmd，结果是：下载了不能卸载了 ？？？   
 ![image](https://github.com/bluskyfly/ysyx/blob/main/biji/tu1.jpg)
 不过主要可能是具体的代码原理不清楚 ？
 
 下载之后想要挂载虚拟机，结果根本不行     想要创建交换机，也不行。    感觉是教程太早了，而且官方的解答不管用
-
 不过确实大部分的有效的答案实际上来自官方，
+非官方的解答可能带来其他问题 比如：
 
-非官方的解答可能带来其他问题 
+之后各种命令行都没有用而且发现，进入wsl后会出现 NAT不可用，所以我估计问题就在交换机哪，但是注意mirrored模式不需要交换机，可能对于mirrored模式我最开始方向错了
 
+以下主要尝试恢复NAT网络
+
+尝试重启
+完全删除wsl以及关闭相关的配置，但是问题是没有任何用处，重新下载后所有的信息都还有。
+尝试完全卸载，按照官方教程删除电脑里和wsl相关的文件之后再下载，没有用，实际上这次下载的已经备份好的文件
+还尝试了wsl --uninstall  这个之后可以使用 wsl --install
+备份方法：wsl --export 发行版Linux tar包路径
+wsl --import <DistributionName>  <安装位置>  <tar文件名>
+也是因为wsl --install 报错， 无法解析包，后面尝试换网络然后开vpn好像才能下载  ，可能是网络问题
+
+中间想要完全卸载hyper-v恢复到最开始设置，但是发现根本就不行。
+不过有一个stackexchange的给出下面尝试     多加了部署清楚环境   而且扫描bug
+ Dism /Online /Cleanup-Image /RestoreHealth
+  Dism.exe /online /Cleanup-Image /StartComponentCleanup
+  sfc /scannow
+ Disable-WindowsOptionalFeature -Online -FeatureName Microsoft-Hyper-V-All
+下次直接让他下载
+出现以下报错
+不支持虚拟化，可能就是上一步出现问题，改变了windows环境。
+而且windows环境一天一换，wsl实在不好用，改用virtualbox
+
+这次下载东西时小心一些，不引入其他问题
+
+比较神奇的是，今天粘贴板能够用了。可能是昨天没有重启让他运行起来
+
+做了以下事情，之前主要是网络配置出现了许多问题，今天通过详细的查看，发现版本和实际不同
