--- a/biji/11.11.md
+++ b/biji/11.11.md
@@ -49,4 +49,8 @@ wsl --import <DistributionName>  <安装位置>  <tar文件名>
 
 比较神奇的是，今天粘贴板能够用了。可能是昨天没有重启让他运行起来
 
-做了以下事情，之前主要是网络配置出现了许多问题，今天通过详细的查看，发现版本和实际不同
+做了以下事情，之前主要是网络配置出现了许多问题，今天通过详细的查看，发现网上的版本和实际不同
+在18.之后文件改变了网络配置文件，然后现在配置是netplan下的文件，但是网上改配置的文件没有明确的说明是否能够连接上vpn，之后也没有详细的说明vpn连接的设置是如何实现的。故在找了一段时间之后，官方文件没有相关的配置能够实现vpn连接
+采用clash连接，先找到命令行，发现Google无法实现，之后改用桌面，因为不知道如何查看是否连接好了。故采用桌面
+之后在视频里，发现要改端口号 127.0.0.1 7890
+因为clash需要7890
