--- a/biji/11.11.md
+++ b/biji/11.11.md
@@ -54,3 +54,16 @@ wsl --import <DistributionName>  <安装位置>  <tar文件名>
 采用clash连接，先找到命令行，发现Google无法实现，之后改用桌面，因为不知道如何查看是否连接好了。故采用桌面
 之后在视频里，发现要改端口号 127.0.0.1 7890
 因为clash需要7890
+
+发现清华源一直有问题，sudo apt-get update 一定要所有都能通过才行
+apt-get  apt
+apt update 命令不仅更新存储库索引，还告知存储库中是否可用软件以及有多少新版本可用。
+Building dependency tree... Done          解析依赖信息
+Reading state information... Don          读取状态信息
+旧的 apt-get upgrade 命令更新系统中当前存在的所有软件包，它不会在系统上安装或删除现有软件包。新的 apt upgrade 命令将安装作为可升级软件包的依赖项添加的软件包。尽管类似于 apt-get 升级，但它也不会删除以前安装的软件包。
+
+apt 可以看作 apt-get 和 apt-cache 命令的子集, 可以为包管理提供必要的命令选项。
+
+apt-get 虽然没被弃用，但作为普通用户，还是应该首先使用 apt。
+
+今天就到这里，明天再继续
