--- a/biji/11.13.md
+++ b/biji/11.13.md
@@ -9,3 +9,5 @@ gsettings get org.gnome.desktop.interface text-scaling-factor
 gsettings set org.gnome.desktop.interface text-scaling-factor 2
 
 设置文字大小
+
+mkdir -p会先创建父目录，然后再创建指定的目录
