--- a/biji/11.13.md
+++ b/biji/11.13.md
@@ -11,3 +11,11 @@ gsettings set org.gnome.desktop.interface text-scaling-factor 2
 设置文字大小
 
 mkdir -p会先创建父目录，然后再创建指定的目录
+
+下载和运行了python
+python 直接sudo apt install python-is-python3
+
+查看ubuntu版本命令
+lsb_release -a
+
+完成vim
