--- a/biji/11.15.md
+++ b/biji/11.15.md
@@ -2,3 +2,98 @@
 #!/usr/bin/python3 — 使用 Python 3 解释器执行脚本。
 #!/usr/bin/env python3 — 使用 env 命令找到系统路径中的 Python 3 解释器来执行脚本，增加了对不同系统的兼容性。
 env从当前环境获取环境变量，从系统路径中找到python 3解释器
+
+基本指令:ctrl+
+c,   中断
+
+\    退出程序
+
+fg   恢复信号，在前台运行
+
+bg   在后台运行
+
+jobs  列出任务
+
+pgrep  找出任务pid
+
+$!  表示最近任务id
+
+kill %加pid
+
+他不会立即终止程序
+nohup封装的程序能够有效的忽略sigup kill
+
+z,  暂停
+
+
+创建别名
+# 创建常用命令的缩写
+alias ll="ls -lh"
+
+# 能够少输入很多
+alias gs="git status"
+alias gc="git commit"
+alias v="vim"
+
+# 手误打错命令也没关系
+alias sl=ls
+
+# 重新定义一些命令行的默认行为
+alias mv="mv -i"           # -i prompts before overwrite
+alias mkdir="mkdir -p"     # -p make parent dirs as needed
+alias df="df -h"           # -h prints human readable format
+
+# 别名可以组合使用
+alias la="ls -A"
+alias lla="la -l"
+
+# 在忽略某个别名
+\ls
+# 或者禁用别名
+unalias la
+
+# 获取别名的定义
+alias ll
+# 会打印 ll='ls -lh'
+
+如果要生效，就放到.bashrc
+
+
+# 可移植性
+配置文件的一个常见的痛点是它可能并不能在多种设备上生效。例如，如果您在不同设备上使用的操作系统或者 shell 是不同的，则配置文件是无法生效的。或者，有时您仅希望特定的配置只在某些设备上生效。
+
+有一些技巧可以轻松达成这些目的。如果配置文件 if 语句，则您可以借助它针对不同的设备编写不同的配置。例如，您的 shell 可以这样做：
+
+if [[ "$(uname)" == "Linux" ]]; then {do_something}; fi
+
+# 使用和 shell 相关的配置时先检查当前 shell 类型
+if [[ "$SHELL" == "zsh" ]]; then {do_something}; fi
+
+# 您也可以针对特定的设备进行配置
+if [[ "$(hostname)" == "myServer" ]]; then {do_something}; fi
+如果配置文件支持 include 功能，您也可以多加利用。例如：~/.gitconfig 可以这样编写：
+
+[include]
+    path = ~/.gitconfig_local
+然后我们可以在日常使用的设备上创建配置文件 ~/.gitconfig_local 来包含与该设备相关的特定配置。您甚至应该创建一个单独的代码仓库来管理这些与设备相关的配置。
+
+如果您希望在不同的程序之间共享某些配置，该方法也适用。例如，如果您想要在 bash 和 zsh 中同时启用一些别名，您可以把它们写在 .aliases 里，然后在这两个 shell 里应用：
+
+# Test if ~/.aliases exists and source it
+if [ -f ~/.aliases ]; then
+    source ~/.aliases
+fi
+
+
+# 关于ssh
+
+cat localfile | ssh remotesever tee serverfile
+将输入写入服务器文件serverfile
+scp path/to/local_file remote_host:path/to/remote_file
+
+alias my_server="ssh -i ~/.id_ed25519 --port 2222 -L 9999:localhost:8888 foobar@remote_server
+alias可以起别名
+
+   while kill -0 $1 # 循环直到进程结束
+
+   while在寻找0
